<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <ImageView
            android:id="@+id/imagen_artesEscenicas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/artes_escenicas"
            app:srcCompat="@drawable/artesescenicas" />

        <TextView
            android:id="@+id/artesEscenicas_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/artes_escenicas"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/artesEscenicas_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imagen_artesPlasticas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/artes_plasticas"
            app:srcCompat="@drawable/artesplasticas" />

        <TextView
            android:id="@+id/artesPlasticas_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/artes_plasticas"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/artesPlasticas_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imagen_talleres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/talleres"
            app:srcCompat="@drawable/formaciontalleres" />

        <TextView
            android:id="@+id/talleres_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/talleres"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/talleres_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imagen_infantil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/infantil"
            app:srcCompat="@drawable/infantil" />

        <TextView
            android:id="@+id/infantil_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/infantil"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/infantil_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imagen_musica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/musica"
            app:srcCompat="@drawable/musica" />

        <TextView
            android:id="@+id/musica_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/musica"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/musica_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imagen_otros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/otros"
            app:srcCompat="@drawable/otros" />

        <TextView
            android:id="@+id/otros_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/otros"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/otros_checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/categoryFilter_button_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/limpiar"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/categoryFilter_button_apply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/aplicar"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>


</LinearLayout>