<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/menu_reload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_eventos_favoritos"
        android:title="@string/eventos_favoritos" />
    <item
        android:id="@+id/menu_filtrarCategoria"
        android:title= "@string/filtrar_por_categoria" />
    <item
        android:id="@+id/menu_info"
        android:title="@string/menu_info" />
    <item
        android:id="@+id/menu_seleccionar_palabras_clave"
        android:title= "@string/seleccionar_palabras_clave" />
</menu>