<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.favouriteevents.FavouriteEventsActivity">

    <ListView
        android:id="@+id/FavouriteEventsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>