...
                    android:id="@+id/event_detail_MasInfo"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:text="@string/mas_informacion" />
                <ImageButton
                    android:id="@+id/event_detail_Favourite"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="@android:color/holo_red_light"
...
